Sodexo Peru/src/objects/Tabla_de_Precios__c.object
<CustomObject>
    <description>Objeto que tiene los precios que usará CPQ para policticas de precios que dependen mas mas de una variable</description>
    <fields>
        <fullName>Comision__c</fullName>
        <inlineHelpText>Indicar la comisión por defecto a cargar para la combinación de Producto y Soporte.</inlineHelpText>
        <label>Comision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Producto__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tablas de Precios</relationshipLabel>
        <relationshipName>Tablas_de_Precios</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tabla de Precios</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Producto__c</columns>
        <columns>ProductCode__c</columns>
        <columns>Comision__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tablas de Precios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>